# snacks_crud_project

./: README.md  db.sqlite3  pyproject.toml
snacks/: admin.py  models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py  0002_rename_name_snacks_title.py  0003_alter_snacks_description.py
snacks_crud_project/: settings.py  urls.py
templates/: base.html  create_list.html  delete_list.html  snacks_detail.html  snacks_list.html  update_list.html
