[tool.poetry]
name = "django-crud"
version = "0.1.0"
description = ""
authors = ["Sara Zwairi <sara.zwairi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
Django = "^3.2.6"
black = "^21.8b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
